<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/Theme.AppTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/quasideback"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:weightSum="1"
                tools:context=".Menu">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="serif-monospace"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/menuTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/imgHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTxt"
        android:gravity="center"
        android:minHeight="180dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_weight="0.08"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icon"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/menuHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgHolder"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/newBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/mainMenuButton"
                android:onClick="newGame"
                android:padding="20dp"
                android:text="@string/new_game"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/loadBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:onClick="loadGame"
                android:padding="18dp"
                android:text="@string/load_game"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/leaderBoardBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:onClick="showLeaderboard"
                android:padding="18dp"
                android:text="@string/leaderboardBtn"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/changeLogBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:onClick="showChangeLog"
                android:padding="18dp"
                android:text="@string/changeLogTitle"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/signOut"
        android:visibility="gone"/>

</RelativeLayout>